--- a/.github/workflows/python-selenium.yml
+++ b/.github/workflows/python-selenium.yml
@@ -27,6 +27,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install allure-pytest
+        pip install webdriver-manager
 
     - name: Install Google Chrome
       run: |
