Fix CI import error by setting PYTHONPATH in GitHub Actions workflow

--- a/.github/workflows/python-selenium.yml
+++ b/.github/workflows/python-selenium.yml
@@ -58,3 +58,9 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./allure-report
+
+    - name: Run tests with PYTHONPATH
+      env:
+          PYTHONPATH: ${{ github.workspace }}
+      run: |
+          pytest --alluredir=allure-results
